err/bulbs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/bulbs'...
Listing './lib/python3.5/site-packages/bulbs/base'...
Listing './lib/python3.5/site-packages/bulbs/neo4jserver'...
Listing './lib/python3.5/site-packages/bulbs/neo4jserver/tests'...
Listing './lib/python3.5/site-packages/bulbs/rexster'...
Listing './lib/python3.5/site-packages/bulbs/rexster/tests'...
Listing './lib/python3.5/site-packages/bulbs/tests'...
Listing './lib/python3.5/site-packages/bulbs/titan'...
Listing './lib/python3.5/site-packages/bulbs/titan/tests'...
Listing './lib/python3.5/site-packages/bulbs-0.3.29.post20140417.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/omnijson'...
Listing './lib/python3.5/site-packages/omnijson/packages'...
Listing './lib/python3.5/site-packages/omnijson/packages/simplejson'...
Compiling './lib/python3.5/site-packages/omnijson/packages/simplejson/decoder.py'...
***   File "./lib/python3.5/site-packages/omnijson/packages/simplejson/decoder.py", line 180
    def JSONObject((s, end), encoding, strict, scan_once, object_hook,
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/omnijson/packages/simplejson/encoder.py'...
***   File "./lib/python3.5/site-packages/omnijson/packages/simplejson/encoder.py", line 320
    False=False,
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/omnijson-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
